<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/background_donation"
   android:padding="10dp"
    tools:context=".ui.Donation.DonationFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"

            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_network"
                android:textColor="@color/color1"/>

            <RadioGroup
                    android:id="@+id/radioGroupSIMType"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/radioButtonSudani"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="@color/color1"
                        android:text="@string/sudani"
                        android:textColor="@color/color1" />

                <RadioButton
                        android:id="@+id/radioButtonMTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="@color/color1"
                        android:text="@string/mtn"
                        android:textColor="@color/color1" />

                <RadioButton

                        android:id="@+id/radioButtonZain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="@color/color1"
                        android:text="@string/zain"
                        android:textColor="@color/color1" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/amount"
                    android:textColor="@color/color1" />

            <EditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rectangle_border"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:padding="5dp"

                    android:textColor="@color/color1" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonDonation"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_button_background_no_icon"
        android:drawableLeft="@drawable/ic_button_icon"
        android:drawableStart="@drawable/ic_button_icon"
        android:drawablePadding="8dp"
        android:letterSpacing="0"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:text="@string/donation_now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewCompany"
         />
</androidx.constraintlayout.widget.ConstraintLayout>